--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/bg.jpeg") top center;
+  background: url("/assets/img/bg_pic.jpeg") top center;
   background-size: cover;
 }
 
