--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,16 +240,16 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-  background: url("/assets/img/bg_pic.jpeg") top center;
-  background-size: cover;
+  /*background: url("/assets/img/shihab.JPG") top center;*/
+  /*background-size: cover;*/
+  background: rgb(245, 248, 253);
 }
 
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
-  bottom: 0;
+  bottom: 720px;
   top: 0;
   left: 0;
   right: 0;
@@ -267,24 +267,24 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #000;
 }
 
 #hero p {
-  color: #fff;
+  color: #000;
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #fff;
+  color: #000;
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 800px) {
   #hero {
     background-attachment: fixed;
   }
