Add text alignment and line height to about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,11 @@ section {
   margin-bottom: 0;
 }
 
+.about .content p {
+  text-align: left;
+  line-height: 1.6;
+}
+
 /*--------------------------------------------------------------
 # Facts
 --------------------------------------------------------------*/
